echo/deployment-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # kpt-merge: example/echo
  name: echo
  namespace: echo
  labels:
    app: echo
  annotations:
    internal.kpt.dev/upstream-identifier: apps|Deployment|example|echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 2
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
        - -text=echo
        ports:
        - containerPort: 5678
