echo/service-echo.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: example/echo
  name: echo
  namespace: echo
  labels:
    app: echo
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|example|echo'
spec:
  ports:
  - port: 80
    targetPort: 5679
  selector:
    app: echo
  type: ClusterIP
